# Gobang

./: .env  CMakeLists.txt  README.md
cmake/: FindOrFetchPackage.cmake
src/: board.cpp  board.h  main.cpp  shader.cpp  shader.h
src/shaders/: basic.vs
